update scripts and notebook

--- a/18_SIP.ipynb
+++ b/18_SIP.ipynb
@@ -823,14 +823,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "b0f07244",
    "metadata": {},
    "outputs": [],
    "source": [
     "opt = Optimization(sim=sim, dobs=dobs)\n",
     "Wd =opt.get_Wd(ratio=relative_error, plateau=noise_floor)\n",
-    "opt.Ws = torch.eye(len(parm_init))"
+    "opt.Ws = torch.eye(len(parm_init))\n",
+    "beta0 = opt.BetaEstimate_byEig(\n",
+    "    m=parm_init,norm=False, update_Wsen=True, beta0_ratio=beta0_ratio)"
    ]
   },
   {
@@ -1133,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "1aed9f87",
    "metadata": {},
    "outputs": [
@@ -1160,13 +1162,49 @@
     "ax.set_ylabel(\"Singular value\")\n",
     "ax.set_title(\"Singular value of Jacobian\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"18_Debye_sum_sip_singular.jpg\", dpi=300)"
+    "# plt.savefig(\"18_Debye_sum_sip_singular.jpg\", dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "0d442058",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savez(\"18_SingularValue.npz\", \n",
+    "         Pelton=S_pelton_norm,\n",
+    "         LWD=S_LWD,\n",
+    "         taus=taus)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d0d653cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00000000e-05, 5.62341325e-05, 3.16227766e-04, 1.77827941e-03,\n",
+       "       1.00000000e-02, 5.62341325e-02, 3.16227766e-01, 1.77827941e+00,\n",
+       "       1.00000000e+01])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taus"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d442058",
+   "id": "4fcd1f67",
    "metadata": {},
    "outputs": [],
    "source": []
